Refine workbench and split oversized sources